<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>lm-lib</artifactId>
	<groupId>de.extio</groupId>
	<name>lm-lib</name>
	<version>2.4.1</version>
	
	<properties>
		<java.version>25</java.version>
		<maven.compiler.source>25</maven.compiler.source>
		<maven.compiler.target>25</maven.compiler.target>		
		<spring-boot.version>4.0.3</spring-boot.version>
		<jtokkit.version>1.1.0</jtokkit.version>
	</properties>
	
	<repositories>
		<repository>
				<id>spacecraft-tactics-releases</id>
				<name>Spacecraft Tactics Repository</name>
				<url>https://spacecraft-tactics.com/repository/releases</url>
		</repository>        
		<repository>
				<id>Central</id>
				<url>https://repo1.maven.org/maven2/</url>
		</repository>
	</repositories>
	
	<distributionManagement>
		<repository>
			<id>spacecraft-tactics</id>
			<url>https://spacecraft-tactics.com/repository/releases</url>
		</repository>
	</distributionManagement>
		
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring-boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-restclient</artifactId>
			<scope>provided</scope>
		</dependency>
		
		<dependency>
			<groupId>com.github.ben-manes.caffeine</groupId>
			<artifactId>caffeine</artifactId>
			<scope>provided</scope>
		</dependency>
		
        <dependency>
            <groupId>com.knuddels</groupId>
            <artifactId>jtokkit</artifactId>
            <version>${jtokkit.version}</version>
            <scope>provided</scope>
        </dependency>
        
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>
